--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/internet"
                 android:textSize="30sp"
+                android:paddingTop="50dp"
                 android:textStyle="bold"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:visibility="invisible"/>
+
+            <include
+                layout="@layout/empty_view" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
