--- a/app/src/main/res/layout/empty_view.xml
+++ b/app/src/main/res/layout/empty_view.xml
@@ -12,15 +12,29 @@
         android:id="@+id/errorImage"
         android:src="@drawable/ic_github"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:layout_width="100dp"
         android:layout_height="100dp" />
 
     <TextView
+        android:id="@+id/errorTitle"
+        android:text="@string/title_error"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="#111111"
+        android:layout_below="@id/errorImage"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/errorMessage"
+        android:layout_marginTop="25dp"
         android:text="@string/message_error"
         android:fontFamily="sans-serif-light"
-        android:layout_below="@id/errorImage"
+        android:layout_below="@id/errorTitle"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         android:layout_width="wrap_content"
